--- a/0417-MVC/읽어보면 좋을 자료.md
+++ b/0417-MVC/읽어보면 좋을 자료.md
@@ -17,3 +17,8 @@
 - 두 객체 간의 결합도를 낮춤
 - 객체의 유연성을 높임
 - 테스트 작성을 용이하게 함
+
+### [빈을 찾기 위한 다양한 의존성 검색 방법, DL(Dependency LookUp)](https://mangkyu.tistory.com/168)
+
+### [필터(Filter) vs 인터셉터(Interceptor) 차이 및 용도 - (1)](https://mangkyu.tistory.com/173)
+
